--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,16 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "pandas (>=2.3.0,<3.0.0)"
+    "pandas (>=2.3.0,<3.0.0)",
+    "numpy (>=2.3.1,<3.0.0)",
+    "matplotlib (>=3.10.3,<4.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "torch (>=2.7.1,<3.0.0)",
+    "torchvision (>=0.22.1,<0.23.0)",
+    "pytorch-lightning (>=2.5.2,<3.0.0)",
+    "torchmetrics (>=1.0.0,<2.0.0)",
+    "wandb (>=0.20.1,<0.21.0)",
+    "scikit-learn (>=1.7.0,<2.0.0)"
 ]
 
 
